src/core/chemInfoParse.output
Terminals which are not used

   APEndOfLine
   APDoubleBond
   APError
   APNegativeFormalCharge
   APPositiveFormalCharge
   APTotalBondNumber
   APTotalExplicitBondNumber


Grammar

    0 $accept: input $end

    1 input: chemInfo

    2 chemInfo: /* empty */
    3         | atomTest
    4         | atomTest chain

    5 chain: bondAtomTest chain
    6      | branch chain
    7      | bondAtomTest
    8      | branch

    9 bondAtomTest: APBond atomTest
   10             | atomTest

   11 acyclicAtomTest: APOpenBracket logOp APCloseBracket
   12                | APOrganicElement
   13                | recursiveChemInfo

   14 atomTest: acyclicAtomTest APNumber
   15         | acyclicAtomTest

   16 branch: APOpenParenthesis chain APCloseParenthesis

   17 logOp: atomPrimativeTest
   18      | APOperatorNot logOp
   19      | logOp APOperatorAndHigh logOp
   20      | logOp APOperatorOr logOp
   21      | logOp APOperatorAndLow logOp

   22 recursiveChemInfo: APDollarSign APOpenParenthesis chemInfo APCloseParenthesis

   23 intNumber: APNumber

   24 atomPrimativeTest: APWildCard
   25                  | APDegree
   26                  | APDegree intNumber
   27                  | APTotalHCount
   28                  | APTotalHCount intNumber
   29                  | APImplicitHCount
   30                  | APImplicitHCount intNumber
   31                  | APRingMembershipCount
   32                  | APRingMembershipCount intNumber
   33                  | APRingSize
   34                  | APRingSize intNumber
   35                  | APValence
   36                  | APValence intNumber
   37                  | APConnectivity
   38                  | APConnectivity intNumber
   39                  | APGroupNumber intNumber
   40                  | APElectronegativeElement
   41                  | APHeavyAtomTotalBond
   42                  | APHeavyAtomTotalBond intNumber
   43                  | APNegativeCharge intNumber
   44                  | APNegativeCharge
   45                  | APNegativeCharge APNegativeCharge
   46                  | APNegativeCharge APNegativeCharge APNegativeCharge
   47                  | APPositiveCharge intNumber
   48                  | APPositiveCharge
   49                  | APPositiveCharge APPositiveCharge
   50                  | APPositiveCharge APPositiveCharge APPositiveCharge
   51                  | APTransitionMetal intNumber
   52                  | APAromaticPiElectron intNumber
   53                  | APPiBondOrbital
   54                  | APAtomicNumber intNumber
   55                  | APChiralityAntiClockwise
   56                  | APChiralityClockwise
   57                  | intNumber
   58                  | APOrganicElement
   59                  | APInorganicElement
   60                  | APLonePair
   61                  | APLonePair intNumber
   62                  | recursiveChemInfo


Terminals, with rules where they appear

$end (0) 0
error (256)
APEndOfLine (258)
APBond (259) 9
APAtomicNumber (260) 54
APChiralityAntiClockwise (261) 55
APChiralityClockwise (262) 56
APCloseBracket (263) 11
APCloseParenthesis (264) 16 22
APConnectivity (265) 37 38
APDegree (266) 25 26
APDollarSign (267) 22
APDoubleBond (268)
APOrganicElement (269) 12 58
APInorganicElement (270) 59
APElectronegativeElement (271) 40
APError (272)
APGroupNumber (273) 39
APHeavyAtomTotalBond (274) 41 42
APImplicitHCount (275) 29 30
APLonePair (276) 60 61
APNegativeCharge (277) 43 44 45 46
APNegativeFormalCharge (278)
APNumber (279) 14 23
APOpenBracket (280) 11
APOpenParenthesis (281) 16 22
APOperatorAndHigh (282) 19
APOperatorAndLow (283) 21
APOperatorNot (284) 18
APOperatorOr (285) 20
APPiBondOrbital (286) 53
APAromaticPiElectron (287) 52
APPositiveCharge (288) 47 48 49 50
APPositiveFormalCharge (289)
APRingMembershipCount (290) 31 32
APRingSize (291) 33 34
APTotalHCount (292) 27 28
APTotalBondNumber (293)
APTotalExplicitBondNumber (294)
APTransitionMetal (295) 51
APValence (296) 35 36
APWildCard (297) 24


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
input (44)
    on left: 1, on right: 0
chemInfo (45)
    on left: 2 3 4, on right: 1 22
chain (46)
    on left: 5 6 7 8, on right: 4 5 6 16
bondAtomTest (47)
    on left: 9 10, on right: 5 7
acyclicAtomTest (48)
    on left: 11 12 13, on right: 14 15
atomTest (49)
    on left: 14 15, on right: 3 4 9 10
branch (50)
    on left: 16, on right: 6 8
logOp (51)
    on left: 17 18 19 20 21, on right: 11 18 19 20 21
recursiveChemInfo (52)
    on left: 22, on right: 13 62
intNumber (53)
    on left: 23, on right: 26 28 30 32 34 36 38 39 42 43 47 51 52 54
    57 61
atomPrimativeTest (54)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62,
    on right: 17


state 0

    0 $accept: . input $end

    APDollarSign      shift, and go to state 1
    APOrganicElement  shift, and go to state 2
    APOpenBracket     shift, and go to state 3

    $default  reduce using rule 2 (chemInfo)

    input              go to state 4
    chemInfo           go to state 5
    acyclicAtomTest    go to state 6
    atomTest           go to state 7
    recursiveChemInfo  go to state 8


state 1

   22 recursiveChemInfo: APDollarSign . APOpenParenthesis chemInfo APCloseParenthesis

    APOpenParenthesis  shift, and go to state 9


state 2

   12 acyclicAtomTest: APOrganicElement .

    $default  reduce using rule 12 (acyclicAtomTest)


state 3

   11 acyclicAtomTest: APOpenBracket . logOp APCloseBracket

    APAtomicNumber            shift, and go to state 10
    APChiralityAntiClockwise  shift, and go to state 11
    APChiralityClockwise      shift, and go to state 12
    APConnectivity            shift, and go to state 13
    APDegree                  shift, and go to state 14
    APDollarSign              shift, and go to state 1
    APOrganicElement          shift, and go to state 15
    APInorganicElement        shift, and go to state 16
    APElectronegativeElement  shift, and go to state 17
    APGroupNumber             shift, and go to state 18
    APHeavyAtomTotalBond      shift, and go to state 19
    APImplicitHCount          shift, and go to state 20
    APLonePair                shift, and go to state 21
    APNegativeCharge          shift, and go to state 22
    APNumber                  shift, and go to state 23
    APOperatorNot             shift, and go to state 24
    APPiBondOrbital           shift, and go to state 25
    APAromaticPiElectron      shift, and go to state 26
    APPositiveCharge          shift, and go to state 27
    APRingMembershipCount     shift, and go to state 28
    APRingSize                shift, and go to state 29
    APTotalHCount             shift, and go to state 30
    APTransitionMetal         shift, and go to state 31
    APValence                 shift, and go to state 32
    APWildCard                shift, and go to state 33

    logOp              go to state 34
    recursiveChemInfo  go to state 35
    intNumber          go to state 36
    atomPrimativeTest  go to state 37


state 4

    0 $accept: input . $end

    $end  shift, and go to state 38


state 5

    1 input: chemInfo .

    $default  reduce using rule 1 (input)


state 6

   14 atomTest: acyclicAtomTest . APNumber
   15         | acyclicAtomTest .

    APNumber  shift, and go to state 39

    $default  reduce using rule 15 (atomTest)


state 7

    3 chemInfo: atomTest .
    4         | atomTest . chain

    APBond             shift, and go to state 40
    APDollarSign       shift, and go to state 1
    APOrganicElement   shift, and go to state 2
    APOpenBracket      shift, and go to state 3
    APOpenParenthesis  shift, and go to state 41

    $default  reduce using rule 3 (chemInfo)

    chain              go to state 42
    bondAtomTest       go to state 43
    acyclicAtomTest    go to state 6
    atomTest           go to state 44
    branch             go to state 45
    recursiveChemInfo  go to state 8


state 8

   13 acyclicAtomTest: recursiveChemInfo .

    $default  reduce using rule 13 (acyclicAtomTest)


state 9

   22 recursiveChemInfo: APDollarSign APOpenParenthesis . chemInfo APCloseParenthesis

    APDollarSign      shift, and go to state 1
    APOrganicElement  shift, and go to state 2
    APOpenBracket     shift, and go to state 3

    $default  reduce using rule 2 (chemInfo)

    chemInfo           go to state 46
    acyclicAtomTest    go to state 6
    atomTest           go to state 7
    recursiveChemInfo  go to state 8


state 10

   54 atomPrimativeTest: APAtomicNumber . intNumber

    APNumber  shift, and go to state 23

    intNumber  go to state 47


state 11

   55 atomPrimativeTest: APChiralityAntiClockwise .

    $default  reduce using rule 55 (atomPrimativeTest)


state 12

   56 atomPrimativeTest: APChiralityClockwise .

    $default  reduce using rule 56 (atomPrimativeTest)


state 13

   37 atomPrimativeTest: APConnectivity .
   38                  | APConnectivity . intNumber

    APNumber  shift, and go to state 23

    $default  reduce using rule 37 (atomPrimativeTest)

    intNumber  go to state 48


state 14

   25 atomPrimativeTest: APDegree .
   26                  | APDegree . intNumber

    APNumber  shift, and go to state 23

    $default  reduce using rule 25 (atomPrimativeTest)

    intNumber  go to state 49


state 15

   58 atomPrimativeTest: APOrganicElement .

    $default  reduce using rule 58 (atomPrimativeTest)


state 16

   59 atomPrimativeTest: APInorganicElement .

    $default  reduce using rule 59 (atomPrimativeTest)


state 17

   40 atomPrimativeTest: APElectronegativeElement .

    $default  reduce using rule 40 (atomPrimativeTest)


state 18

   39 atomPrimativeTest: APGroupNumber . intNumber

    APNumber  shift, and go to state 23

    intNumber  go to state 50


state 19

   41 atomPrimativeTest: APHeavyAtomTotalBond .
   42                  | APHeavyAtomTotalBond . intNumber

    APNumber  shift, and go to state 23

    $default  reduce using rule 41 (atomPrimativeTest)

    intNumber  go to state 51


state 20

   29 atomPrimativeTest: APImplicitHCount .
   30                  | APImplicitHCount . intNumber

    APNumber  shift, and go to state 23

    $default  reduce using rule 29 (atomPrimativeTest)

    intNumber  go to state 52


state 21

   60 atomPrimativeTest: APLonePair .
   61                  | APLonePair . intNumber

    APNumber  shift, and go to state 23

    $default  reduce using rule 60 (atomPrimativeTest)

    intNumber  go to state 53


state 22

   43 atomPrimativeTest: APNegativeCharge . intNumber
   44                  | APNegativeCharge .
   45                  | APNegativeCharge . APNegativeCharge
   46                  | APNegativeCharge . APNegativeCharge APNegativeCharge

    APNegativeCharge  shift, and go to state 54
    APNumber          shift, and go to state 23

    $default  reduce using rule 44 (atomPrimativeTest)

    intNumber  go to state 55


state 23

   23 intNumber: APNumber .

    $default  reduce using rule 23 (intNumber)


state 24

   18 logOp: APOperatorNot . logOp

    APAtomicNumber            shift, and go to state 10
    APChiralityAntiClockwise  shift, and go to state 11
    APChiralityClockwise      shift, and go to state 12
    APConnectivity            shift, and go to state 13
    APDegree                  shift, and go to state 14
    APDollarSign              shift, and go to state 1
    APOrganicElement          shift, and go to state 15
    APInorganicElement        shift, and go to state 16
    APElectronegativeElement  shift, and go to state 17
    APGroupNumber             shift, and go to state 18
    APHeavyAtomTotalBond      shift, and go to state 19
    APImplicitHCount          shift, and go to state 20
    APLonePair                shift, and go to state 21
    APNegativeCharge          shift, and go to state 22
    APNumber                  shift, and go to state 23
    APOperatorNot             shift, and go to state 24
    APPiBondOrbital           shift, and go to state 25
    APAromaticPiElectron      shift, and go to state 26
    APPositiveCharge          shift, and go to state 27
    APRingMembershipCount     shift, and go to state 28
    APRingSize                shift, and go to state 29
    APTotalHCount             shift, and go to state 30
    APTransitionMetal         shift, and go to state 31
    APValence                 shift, and go to state 32
    APWildCard                shift, and go to state 33

    logOp              go to state 56
    recursiveChemInfo  go to state 35
    intNumber          go to state 36
    atomPrimativeTest  go to state 37


state 25

   53 atomPrimativeTest: APPiBondOrbital .

    $default  reduce using rule 53 (atomPrimativeTest)


state 26

   52 atomPrimativeTest: APAromaticPiElectron . intNumber

    APNumber  shift, and go to state 23

    intNumber  go to state 57


state 27

   47 atomPrimativeTest: APPositiveCharge . intNumber
   48                  | APPositiveCharge .
   49                  | APPositiveCharge . APPositiveCharge
   50                  | APPositiveCharge . APPositiveCharge APPositiveCharge

    APNumber          shift, and go to state 23
    APPositiveCharge  shift, and go to state 58

    $default  reduce using rule 48 (atomPrimativeTest)

    intNumber  go to state 59


state 28

   31 atomPrimativeTest: APRingMembershipCount .
   32                  | APRingMembershipCount . intNumber

    APNumber  shift, and go to state 23

    $default  reduce using rule 31 (atomPrimativeTest)

    intNumber  go to state 60


state 29

   33 atomPrimativeTest: APRingSize .
   34                  | APRingSize . intNumber

    APNumber  shift, and go to state 23

    $default  reduce using rule 33 (atomPrimativeTest)

    intNumber  go to state 61


state 30

   27 atomPrimativeTest: APTotalHCount .
   28                  | APTotalHCount . intNumber

    APNumber  shift, and go to state 23

    $default  reduce using rule 27 (atomPrimativeTest)

    intNumber  go to state 62


state 31

   51 atomPrimativeTest: APTransitionMetal . intNumber

    APNumber  shift, and go to state 23

    intNumber  go to state 63


state 32

   35 atomPrimativeTest: APValence .
   36                  | APValence . intNumber

    APNumber  shift, and go to state 23

    $default  reduce using rule 35 (atomPrimativeTest)

    intNumber  go to state 64


state 33

   24 atomPrimativeTest: APWildCard .

    $default  reduce using rule 24 (atomPrimativeTest)


state 34

   11 acyclicAtomTest: APOpenBracket logOp . APCloseBracket
   19 logOp: logOp . APOperatorAndHigh logOp
   20      | logOp . APOperatorOr logOp
   21      | logOp . APOperatorAndLow logOp

    APCloseBracket     shift, and go to state 65
    APOperatorAndHigh  shift, and go to state 66
    APOperatorAndLow   shift, and go to state 67
    APOperatorOr       shift, and go to state 68


state 35

   62 atomPrimativeTest: recursiveChemInfo .

    $default  reduce using rule 62 (atomPrimativeTest)


state 36

   57 atomPrimativeTest: intNumber .

    $default  reduce using rule 57 (atomPrimativeTest)


state 37

   17 logOp: atomPrimativeTest .

    $default  reduce using rule 17 (logOp)


state 38

    0 $accept: input $end .

    $default  accept


state 39

   14 atomTest: acyclicAtomTest APNumber .

    $default  reduce using rule 14 (atomTest)


state 40

    9 bondAtomTest: APBond . atomTest

    APDollarSign      shift, and go to state 1
    APOrganicElement  shift, and go to state 2
    APOpenBracket     shift, and go to state 3

    acyclicAtomTest    go to state 6
    atomTest           go to state 69
    recursiveChemInfo  go to state 8


state 41

   16 branch: APOpenParenthesis . chain APCloseParenthesis

    APBond             shift, and go to state 40
    APDollarSign       shift, and go to state 1
    APOrganicElement   shift, and go to state 2
    APOpenBracket      shift, and go to state 3
    APOpenParenthesis  shift, and go to state 41

    chain              go to state 70
    bondAtomTest       go to state 43
    acyclicAtomTest    go to state 6
    atomTest           go to state 44
    branch             go to state 45
    recursiveChemInfo  go to state 8


state 42

    4 chemInfo: atomTest chain .

    $default  reduce using rule 4 (chemInfo)


state 43

    5 chain: bondAtomTest . chain
    7      | bondAtomTest .

    APBond             shift, and go to state 40
    APDollarSign       shift, and go to state 1
    APOrganicElement   shift, and go to state 2
    APOpenBracket      shift, and go to state 3
    APOpenParenthesis  shift, and go to state 41

    $default  reduce using rule 7 (chain)

    chain              go to state 71
    bondAtomTest       go to state 43
    acyclicAtomTest    go to state 6
    atomTest           go to state 44
    branch             go to state 45
    recursiveChemInfo  go to state 8


state 44

   10 bondAtomTest: atomTest .

    $default  reduce using rule 10 (bondAtomTest)


state 45

    6 chain: branch . chain
    8      | branch .

    APBond             shift, and go to state 40
    APDollarSign       shift, and go to state 1
    APOrganicElement   shift, and go to state 2
    APOpenBracket      shift, and go to state 3
    APOpenParenthesis  shift, and go to state 41

    $default  reduce using rule 8 (chain)

    chain              go to state 72
    bondAtomTest       go to state 43
    acyclicAtomTest    go to state 6
    atomTest           go to state 44
    branch             go to state 45
    recursiveChemInfo  go to state 8


state 46

   22 recursiveChemInfo: APDollarSign APOpenParenthesis chemInfo . APCloseParenthesis

    APCloseParenthesis  shift, and go to state 73


state 47

   54 atomPrimativeTest: APAtomicNumber intNumber .

    $default  reduce using rule 54 (atomPrimativeTest)


state 48

   38 atomPrimativeTest: APConnectivity intNumber .

    $default  reduce using rule 38 (atomPrimativeTest)


state 49

   26 atomPrimativeTest: APDegree intNumber .

    $default  reduce using rule 26 (atomPrimativeTest)


state 50

   39 atomPrimativeTest: APGroupNumber intNumber .

    $default  reduce using rule 39 (atomPrimativeTest)


state 51

   42 atomPrimativeTest: APHeavyAtomTotalBond intNumber .

    $default  reduce using rule 42 (atomPrimativeTest)


state 52

   30 atomPrimativeTest: APImplicitHCount intNumber .

    $default  reduce using rule 30 (atomPrimativeTest)


state 53

   61 atomPrimativeTest: APLonePair intNumber .

    $default  reduce using rule 61 (atomPrimativeTest)


state 54

   45 atomPrimativeTest: APNegativeCharge APNegativeCharge .
   46                  | APNegativeCharge APNegativeCharge . APNegativeCharge

    APNegativeCharge  shift, and go to state 74

    $default  reduce using rule 45 (atomPrimativeTest)


state 55

   43 atomPrimativeTest: APNegativeCharge intNumber .

    $default  reduce using rule 43 (atomPrimativeTest)


state 56

   18 logOp: APOperatorNot logOp .
   19      | logOp . APOperatorAndHigh logOp
   20      | logOp . APOperatorOr logOp
   21      | logOp . APOperatorAndLow logOp

    $default  reduce using rule 18 (logOp)


state 57

   52 atomPrimativeTest: APAromaticPiElectron intNumber .

    $default  reduce using rule 52 (atomPrimativeTest)


state 58

   49 atomPrimativeTest: APPositiveCharge APPositiveCharge .
   50                  | APPositiveCharge APPositiveCharge . APPositiveCharge

    APPositiveCharge  shift, and go to state 75

    $default  reduce using rule 49 (atomPrimativeTest)


state 59

   47 atomPrimativeTest: APPositiveCharge intNumber .

    $default  reduce using rule 47 (atomPrimativeTest)


state 60

   32 atomPrimativeTest: APRingMembershipCount intNumber .

    $default  reduce using rule 32 (atomPrimativeTest)


state 61

   34 atomPrimativeTest: APRingSize intNumber .

    $default  reduce using rule 34 (atomPrimativeTest)


state 62

   28 atomPrimativeTest: APTotalHCount intNumber .

    $default  reduce using rule 28 (atomPrimativeTest)


state 63

   51 atomPrimativeTest: APTransitionMetal intNumber .

    $default  reduce using rule 51 (atomPrimativeTest)


state 64

   36 atomPrimativeTest: APValence intNumber .

    $default  reduce using rule 36 (atomPrimativeTest)


state 65

   11 acyclicAtomTest: APOpenBracket logOp APCloseBracket .

    $default  reduce using rule 11 (acyclicAtomTest)


state 66

   19 logOp: logOp APOperatorAndHigh . logOp

    APAtomicNumber            shift, and go to state 10
    APChiralityAntiClockwise  shift, and go to state 11
    APChiralityClockwise      shift, and go to state 12
    APConnectivity            shift, and go to state 13
    APDegree                  shift, and go to state 14
    APDollarSign              shift, and go to state 1
    APOrganicElement          shift, and go to state 15
    APInorganicElement        shift, and go to state 16
    APElectronegativeElement  shift, and go to state 17
    APGroupNumber             shift, and go to state 18
    APHeavyAtomTotalBond      shift, and go to state 19
    APImplicitHCount          shift, and go to state 20
    APLonePair                shift, and go to state 21
    APNegativeCharge          shift, and go to state 22
    APNumber                  shift, and go to state 23
    APOperatorNot             shift, and go to state 24
    APPiBondOrbital           shift, and go to state 25
    APAromaticPiElectron      shift, and go to state 26
    APPositiveCharge          shift, and go to state 27
    APRingMembershipCount     shift, and go to state 28
    APRingSize                shift, and go to state 29
    APTotalHCount             shift, and go to state 30
    APTransitionMetal         shift, and go to state 31
    APValence                 shift, and go to state 32
    APWildCard                shift, and go to state 33

    logOp              go to state 76
    recursiveChemInfo  go to state 35
    intNumber          go to state 36
    atomPrimativeTest  go to state 37


state 67

   21 logOp: logOp APOperatorAndLow . logOp

    APAtomicNumber            shift, and go to state 10
    APChiralityAntiClockwise  shift, and go to state 11
    APChiralityClockwise      shift, and go to state 12
    APConnectivity            shift, and go to state 13
    APDegree                  shift, and go to state 14
    APDollarSign              shift, and go to state 1
    APOrganicElement          shift, and go to state 15
    APInorganicElement        shift, and go to state 16
    APElectronegativeElement  shift, and go to state 17
    APGroupNumber             shift, and go to state 18
    APHeavyAtomTotalBond      shift, and go to state 19
    APImplicitHCount          shift, and go to state 20
    APLonePair                shift, and go to state 21
    APNegativeCharge          shift, and go to state 22
    APNumber                  shift, and go to state 23
    APOperatorNot             shift, and go to state 24
    APPiBondOrbital           shift, and go to state 25
    APAromaticPiElectron      shift, and go to state 26
    APPositiveCharge          shift, and go to state 27
    APRingMembershipCount     shift, and go to state 28
    APRingSize                shift, and go to state 29
    APTotalHCount             shift, and go to state 30
    APTransitionMetal         shift, and go to state 31
    APValence                 shift, and go to state 32
    APWildCard                shift, and go to state 33

    logOp              go to state 77
    recursiveChemInfo  go to state 35
    intNumber          go to state 36
    atomPrimativeTest  go to state 37


state 68

   20 logOp: logOp APOperatorOr . logOp

    APAtomicNumber            shift, and go to state 10
    APChiralityAntiClockwise  shift, and go to state 11
    APChiralityClockwise      shift, and go to state 12
    APConnectivity            shift, and go to state 13
    APDegree                  shift, and go to state 14
    APDollarSign              shift, and go to state 1
    APOrganicElement          shift, and go to state 15
    APInorganicElement        shift, and go to state 16
    APElectronegativeElement  shift, and go to state 17
    APGroupNumber             shift, and go to state 18
    APHeavyAtomTotalBond      shift, and go to state 19
    APImplicitHCount          shift, and go to state 20
    APLonePair                shift, and go to state 21
    APNegativeCharge          shift, and go to state 22
    APNumber                  shift, and go to state 23
    APOperatorNot             shift, and go to state 24
    APPiBondOrbital           shift, and go to state 25
    APAromaticPiElectron      shift, and go to state 26
    APPositiveCharge          shift, and go to state 27
    APRingMembershipCount     shift, and go to state 28
    APRingSize                shift, and go to state 29
    APTotalHCount             shift, and go to state 30
    APTransitionMetal         shift, and go to state 31
    APValence                 shift, and go to state 32
    APWildCard                shift, and go to state 33

    logOp              go to state 78
    recursiveChemInfo  go to state 35
    intNumber          go to state 36
    atomPrimativeTest  go to state 37


state 69

    9 bondAtomTest: APBond atomTest .

    $default  reduce using rule 9 (bondAtomTest)


state 70

   16 branch: APOpenParenthesis chain . APCloseParenthesis

    APCloseParenthesis  shift, and go to state 79


state 71

    5 chain: bondAtomTest chain .

    $default  reduce using rule 5 (chain)


state 72

    6 chain: branch chain .

    $default  reduce using rule 6 (chain)


state 73

   22 recursiveChemInfo: APDollarSign APOpenParenthesis chemInfo APCloseParenthesis .

    $default  reduce using rule 22 (recursiveChemInfo)


state 74

   46 atomPrimativeTest: APNegativeCharge APNegativeCharge APNegativeCharge .

    $default  reduce using rule 46 (atomPrimativeTest)


state 75

   50 atomPrimativeTest: APPositiveCharge APPositiveCharge APPositiveCharge .

    $default  reduce using rule 50 (atomPrimativeTest)


state 76

   19 logOp: logOp . APOperatorAndHigh logOp
   19      | logOp APOperatorAndHigh logOp .
   20      | logOp . APOperatorOr logOp
   21      | logOp . APOperatorAndLow logOp

    $default  reduce using rule 19 (logOp)


state 77

   19 logOp: logOp . APOperatorAndHigh logOp
   20      | logOp . APOperatorOr logOp
   21      | logOp . APOperatorAndLow logOp
   21      | logOp APOperatorAndLow logOp .

    APOperatorAndHigh  shift, and go to state 66
    APOperatorOr       shift, and go to state 68

    $default  reduce using rule 21 (logOp)


state 78

   19 logOp: logOp . APOperatorAndHigh logOp
   20      | logOp . APOperatorOr logOp
   20      | logOp APOperatorOr logOp .
   21      | logOp . APOperatorAndLow logOp

    APOperatorAndHigh  shift, and go to state 66

    $default  reduce using rule 20 (logOp)


state 79

   16 branch: APOpenParenthesis chain APCloseParenthesis .

    $default  reduce using rule 16 (branch)
